# MarketShield

./: README.md  config.py  database.py  logger.py  main.py  models.py  pyproject.toml
ai_detection/: ai_detector.py  entity_extractor.py  perplexity.py  runner.py  sentiment.py
dashboard/: app.py  charts.py  data_layer.py
data_ingestion/: reddit_collector.py  rss_collector.py  runner.py  storage_adapter.py
market_analysis/: correlator.py  monitor.py  price_fetcher.py  volatility.py
propagation_analysis/: coordination.py  deduplicator.py  graph_builder.py  runner.py
risk_engine/: alert_manager.py  pipeline.py  scorer.py
simulations/: historical_replay.py  runner.py
simulations/scenarios/: definitions.py
tests/: test_data_ingestion.py  test_market_analysis.py  test_nlp_pipeline.py  test_propagation.py  test_risk_engine.py  test_simulations.py
