[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "marketshield"
version = "0.1.0"
description = "AI-powered financial news manipulation detection system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MarketShield Contributors" }]
keywords = ["finance", "nlp", "misinformation", "machine-learning", "market-manipulation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Data collection
    "feedparser>=6.0",
    "praw>=7.7",
    "httpx>=0.27",
    "aiohttp>=3.9",

    # NLP & ML
    "transformers>=4.40",
    "torch>=2.2",
    "scikit-learn>=1.4",
    "nltk>=3.8",
    "spacy>=3.7",
    "sentence-transformers>=2.7",

    # Data processing
    "pandas>=2.2",
    "numpy>=1.26",
    "scipy>=1.13",

    # Graph analysis
    "networkx>=3.3",
    "python-louvain>=0.16",

    # Financial data
    "yfinance>=0.2",
    "pycoingecko>=3.1",

    # API / serving
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.7",
    "pydantic-settings>=2.2",

    # Dashboard
    "streamlit>=1.35",
    "plotly>=5.22",
    "altair>=5.3",

    # Storage
    "tinydb>=4.8",
    "sqlalchemy>=2.0",

    # Utilities
    "python-dotenv>=1.0",
    "rich>=13.7",
    "loguru>=0.7",
    "tenacity>=8.3",
    "python-dateutil>=2.9",
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "black>=24.4",
    "ipykernel>=6.29",
]

[project.scripts]
marketshield = "marketshield.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"